--- a/index.html
+++ b/index.html
@@ -317,6 +317,21 @@
              </div>
             </div>
           </div>
+		
+           <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="img/team-3.svg" alt="Florian Groß"></div>
+              <h4>Florian Groß</h4>
+              <span>developer</span>
+              <span>development</span>
+              <span>scientific employee at the <a href="https://www.gut.uni-wuppertal.de/">BUW-University</a></span>
+              <div class="social">
+
+             </div>
+            </div
+		
+		
+		
       </div>
     </section><!-- #team -->
 
